# trends_reddit

./: .env.example  .gitignore  README.md  app.sh  demo.sh  pyproject.toml  requirements.txt
src/: cli.py  config.py  reddit_client.py  setup.py  trends_client.py
