[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mi-script-cli"
version = "0.1.0"
description = "Reddit CLI tool"
requires-python = ">=3.10"
dependencies = [
    "praw>=7.7",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.scripts]
mi-script-cli = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
